# Payego

./: .dockerignore  .env.example  .gitignore  ANALYSIS_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.Docker.md  README.md  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_final.txt  diesel.toml  dock.txt  docker-compose.yml  prometheus.yml  success_report.md
.github/workflows/: cd.yml  ci.yml
crates/api/: Cargo.toml
crates/api/src/: app.rs  lib.rs
crates/api/src/config/: swagger_config.rs
crates/api/src/handlers/: add_bank.rs  all_banks.rs  audit_logs.rs  bank.rs  current_user.rs  delete_bank.rs  exchange_rate.rs  get_transaction.rs  health.rs  initialize_banks.rs  internal_conversion.rs  login.rs  logout.rs  mod.rs  paypal_capture.rs  paypal_order.rs  paystack_webhook.rs  refresh_token.rs  register.rs  resolve_account.rs  resolve_user.rs  send_verification.rs  social_login.rs  stripe_webhook.rs  top_up.rs  transaction.rs  transfer_external.rs  transfer_internal.rs  user_bank_accounts.rs  user_transaction.rs  user_wallets.rs  verify_email.rs  withdraw.rs
crates/core/: Cargo.toml
crates/core/src/: app_state.rs  client.rs  lib.rs  security.rs
crates/core/src/clients/: email.rs  exchange_rate.rs  mod.rs  paystack.rs  stripe.rs
crates/core/src/repositories/: audit_repository.rs  bank_account_repository.rs  bank_repository.rs  mod.rs  token_repository.rs  transaction_repository.rs  user_repository.rs  verification_repository.rs  wallet_repository.rs
crates/core/src/services/: audit_service.rs  auth_service.rs  bank_account_service.rs  bank_service.rs  conversion_service.rs  mod.rs  payment_service.rs  paypal_service.rs  paystack_service.rs  stripe_service.rs  transaction_service.rs  transfer_service.rs  wallet_service.rs  withdrawal_service.rs
crates/core/src/services/auth_service/: login.rs  logout.rs  mod.rs  register.rs  token.rs  user.rs  verification.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: error.rs  lib.rs  schema.rs  utility.rs
crates/primitives/src/config/: mod.rs  security_config.rs
crates/primitives/src/models/: app_state.rs  dtos.rs  entities.rs  mod.rs  models.rs  to_schema.rs
crates/primitives/src/models/app_state/: app_config.rs  app_state.rs  jwt_details.rs  mod.rs  paypal_details.rs  paystack_details.rs  state.rs  stripe_details.rs
crates/primitives/src/models/dtos/: auth_dto.rs  bank_dto.rs  bank_dtos.rs  clients_dto.rs  conversion_dto.rs  dtos.rs  login_dto.rs  mod.rs  providers_dto.rs  register_dto.rs  token_dto.rs  top_up_dto.rs  transaction_dto.rs  transfer_dto.rs  wallet_dto.rs  withdrawal_dto.rs
crates/primitives/src/models/dtos/providers/: mod.rs  paypal.rs  paystack.rs  stripe.rs
crates/primitives/src/models/dtos/repository_dto/: mod.rs  transaction_dto.rs
crates/primitives/src/models/entities/: audit_log.rs  authentication.rs  bank.rs  entities.rs  enum_types.rs  mod.rs  transaction.rs  user.rs  verification_token.rs  wallet.rs  wallet_ledger.rs
migrations/2025-09-15-001320_create_tables/: down.sql  up.sql
migrations/2026-01-06-034258-0000_create_posts/: down.sql  up.sql
migrations/2026-01-08-151343-0000_add_refresh_tokens_table/: up.sql
migrations/2026-01-12-232734-0000_create_tables/: down.sql  up.sql
migrations/2026-01-13-121446-0000_create_tables/: down.sql  up.sql
migrations/2026-01-15-101612-0000_create_tables/: up.sql
migrations/2026-01-28-152500_create_audit_logs/: up.sql
migrations/2026-01-28-181124-0000_add_verification_support_and_audit_retrieval_indices/: down.sql  up.sql
payego_ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
payego_ui/.husky/: pre-commit
payego_ui/e2e/: auth.spec.ts
payego_ui/playwright-report/: index.html
payego_ui/src/: App.jsx  App.tsx  index.css  main.tsx  setupTests.js  vite-env.d.ts
payego_ui/src/__tests__/: App.test.jsx  App.test.tsx
payego_ui/src/api/: auth.js  auth.ts  bank.ts  client.js  client.ts  transactions.js  transactions.ts  users.ts  wallets.js  wallets.ts
payego_ui/src/components/: AddBankForm.jsx  AddBankForm.tsx  BankList.jsx  BankList.tsx  ConvertForm.jsx  ConvertForm.tsx  Dashboard.jsx  Dashboard.tsx  ErrorBoundary.tsx  LandingPage.jsx  LandingPage.tsx  LoginForm.jsx  LoginForm.tsx  PayPalPayment.jsx  PayPalPayment.tsx  Profile.tsx  RegisterForm.jsx  RegisterForm.tsx  Sidebar.tsx  StripePayment.jsx  StripePayment.tsx  SuccessPage.jsx  SuccessPage.tsx  ThemeToggle.tsx  TopUpForm.jsx  TopUpForm.tsx  Transactions.tsx  TransferForm.jsx  TransferForm.tsx  Wallets.tsx  WithdrawForm.tsx
payego_ui/src/contexts/: AuthContext.tsx
payego_ui/src/hooks/: useBanks.ts  useTransactions.ts  useWallets.ts
payego_ui/src/pages/: Security.tsx  VerifyEmail.tsx
payego_ui/test-results/: .last-run.json
src/: app.rs  error.rs  initialize_banks.rs  lib.rs  logging.rs  main.rs  schema.rs  tasks.rs  up.txt  utility.rs
src/config/: mod.rs  security_config.rs  swagger_config.rs
src/handlers/: all_banks.rs  bank.rs  current_user.rs  get_transaction.rs  health.rs  initialize_banks.rs  internal_conversion.rs  login.rs  logout.rs  mod.rs  pay_out.rs  paypal_capture.rs  paypal_order.rs  paystack_webhook.rs  refresh_token.rs  register.rs  resolve_account.rs  send_verification.rs  social_login.rs  stripe_webhook.rs  top_up.rs  transaction.rs  transfer.rs  transfer_external.rs  transfer_internal.rs  user_bank_accounts.rs  user_wallets.rs  webhook.rs  withdraw.rs
src/models/: app_state.rs  dtos.rs  entities.rs  mod.rs  models.rs  user_models.rs
src/observability/: metrics.rs
src/services/: auth_service.rs  bank_service.rs  conversion_service.rs  mod.rs  payment_service.rs  transfer_service.rs  withdrawal_service.rs
tests/: api_tests.rs  auth_tests.rs  bank_service_test.rs  conversion_service_test.rs  error_tests.rs  idempotency_tests.rs  payment_service_test.rs  rate_limit_tests.rs  transaction_tests.rs  wallet_tests.rs  withdrawal_service_test.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
(+5 files in other folders)
