[package]
name = "payego"
version = "0.1.0"
edition = "2024"





[dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
axum = "0.8.4"
http = "1.3.1"
diesel = { version = "2.3.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
headers = "0.4.1"
argon2 = "0.5.0"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
regex = "1.11.2"
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["limit", "cors"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
governor = "0.10.1"
reqwest = { version = "0.12", features = ["json"] }
deadpool = { version = "0.10", features = ["serde"] }
#stripe = "0.0.5"
async-stripe = { version = "0.41.0", features = ["webhook-events", "runtime-tokio-hyper"] }
serde_json = "1.0"
base64 = "0.22.1"
hyper = "1.4"
async-trait = "0.1"
tracing-subscriber = "0.3.20"
lazy_static = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"








#
#tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
#axum = "0.8.4"
#diesel = { version = "2.3.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
#serde = { version = "1.0.219", features = ["derive"] }
#headers = "0.4.1"
#argon2 = "0.5.0"
#chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
#jsonwebtoken = "9.3.1"
#bcrypt = "0.17.1"
#utoipa = { version = "5.4.0", features = ["axum_extras"] }
#utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
#dotenv = "0.15.0"
#dotenvy = "0.15.7"
#eyre = "0.6.12"
#uuid = { version = "1.18.1", features = ["v4"] }
#tracing = "0.1.41"
#regex = "1.11.2"
#validator = { version = "0.20.0", features = ["derive"] }
#once_cell = "1.21.3"
#tower = "0.5.2"
#tower-http = { version = "0.6.6", features = ["limit", "cors"] }
#redis = { version = "0.32.5", features = ["tokio-comp"] }
#governor = "0.10.1"
#reqwest = { version = "0.12.23", features = ["json"] }
#deadpool = { version = "0.12.3", features = ["serde"] }
#async-stripe = { version = "0.41.0", features = ["webhook-events", "runtime-tokio-hyper"] }
#serde_json = "1.0.145"
#base64 = "0.22.1"
#async-trait = "0.1.89"
#hyper = "1.7.0"

#[dev-dependencies]
#http = "1.1"
#









