[workspace]
members = [
    "bin/*",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
axum = "0.8.4"
http = "1.3.1"
diesel = { version = "2.3.1", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
serde = { version = "1.0.225", features = ["derive"] }
headers = "0.4.1"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
jsonwebtoken = "9.3.1"
argon2 = { version = "0.5", features = ["std"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.41"
regex = "1.11.2"
validator = { version = "0.20.0", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["limit", "cors", "trace", "request-id"] }
stripe = { package = "async-stripe", version = "0.41.0", features = ["webhook-events", "runtime-tokio-hyper"] }
serde_json = "1.0.145"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
lazy_static = "1.5.0"
hmac = "0.13.0-rc.2"
sha2 = "0.11.0-rc.2"
hex = "0.4.3"
base64ct = "1.8.0"
openssl = { version = "0.10", features = ["vendored"] }
secrecy = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
rand = "0.7.3"
lettre = "0.11.18"
url = "2.5.7"
tower_governor = "0.8.0"
axum-prometheus = "0.10.0"
strum = { version = "0.26", features = ["derive"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
thiserror = "2.0.17"
once_cell = "1.21.3"

# Workspace local dependencies
payego-primitives = { path = "crates/primitives" }
payego-core = { path = "crates/core" }
payego-api = { path = "crates/api" }
