[package]
name = "payego-core"
version.workspace = true
edition.workspace = true

[dependencies]
payego-primitives = { workspace = true }
diesel = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
http = { workspace = true }
stripe = { workspace = true }
r2d2 = "0.8.10"
