[package]
name = "payego-core"
version.workspace = true
edition.workspace = true

[dependencies]
payego-primitives = { workspace = true }
diesel = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
http = { workspace = true }
stripe = { workspace = true }
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
utoipa = "5.4.0"
hmac.workspace = true
subtle = "2.6.1"
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"
validator = "0.20.0"
strum = "0.26.3"
