[package]
name = "payego-primitives"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
diesel.workspace = true
secrecy.workspace = true
eyre.workspace = true
axum.workspace = true
validator.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
utoipa.workspace = true
stripe.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
base64.workspace = true
http.workspace = true
